--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="hidden" style="visibility: hidden;"><img src="%PUBLIC_URL%/thumbnail.png"></div>
   </body>
 </html>
