Added link preview

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:title" content="CovTrack" />
+    <meta property="og:description" content="Covid-19 Statistics" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>CovTrack</title>
   </head>
   <body>
     <div id="root"></div>
-    <div class="hidden" style="visibility: hidden;"><img src="%PUBLIC_URL%/thumbnail.png"></div>
   </body>
 </html>
